# EpicGamesNotification

./: .gitignore  .pre-commit-config.yaml  EpicGamesReminder.py  EpicGamesReminderTkinter.py  README.md  _desktop_app.py  _trash.py  curl_req  desktop_app.py  freegames.csv  out.json  pyproject.toml  requirements.txt  run_.py  scraper.output.json  so_content.html  specials.json  steam.html  steam.offers.html  subs.txt  test_mail.py  test_scrape.py
apps/: __init__.py
apps/mail/: tasks.py
apps/mail/template/: index.html
apps/scrape/: tasks.py
commons/: _mail.py  _save.py  _scrape.py
epicgamesnotification/apps/: __init__.py
epicgamesnotification/apps/mail/: tasks.py
epicgamesnotification/apps/scrape/: epicgames.py  steampowered.py  tasks.py
epicgamesnotification/commons/: _mail.py  _save.py  _scrape.py
epicgamesnotification/utils/: utils.py
src/apps/: __init__.py
src/apps/mail/: tasks.py
src/apps/scrape/: tasks.py
src/commons/: _mail.py  _save.py  _scrape.py
src/utils/: utils.py
tests/: test_mail.py  test_scrape.py
utils/: utils.py
